--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "gatsby": "^2.25.3",
+    "gatsby-background-image": "^1.2.0",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-offline": "^3.3.3",
@@ -15,6 +17,7 @@
     "gatsby-transformer-sharp": "^2.5.21",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
